# antinasurfer

./: README.md
ALOE_DOCENCIA_20210116/: .autotools  .cproject  .project  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.am.SK_LIB  Makefile.am~  Makefile.in  Makefile.in~  README  README~  aloeui.run  compileALL.sh  compilePART.sh  config.status  configure  configure.ac  configure.ac~  configure.scan  configureALL.sh  configureALL.sh~  cpu_info.debug_level  make_install.sh  make_install.sh~  runcf_start.sh  runcf_start.sh~  scriptInstallALL.sh  stop_runcf.sh  stop_runcf.sh~  temp
ALOE_DOCENCIA_20210116/APPs/GRAPHTools/SOURCE_GRAPH/: ONLY_GRAPH.app  SOURCE_GRAPH.app  SOURCE_GRAPH.app~  runcf_start.sh~  runcf_startRT.sh  runcf_startRT.sh~  scheduling.conf~  stop_runcf.sh~
ALOE_DOCENCIA_20210116/APPs/JACKTools/CAPTURE_CHANNEL/: SHOW_CHANNEL.app  TEST_DACJACK_RX_GRAPH.app~  runcf_start_SIMUL.sh
ALOE_DOCENCIA_20210116/APPs/JACKTools/CHANNEL_ANALYZER/: CHANNEL_ANALYZER_FREQSWEEP.app  CHANNEL_ANALYZER_FREQSWEEP.app~  CHANNEL_ANALYZER_IMPULSE.app  CHANNEL_ANALYZER_IMPULSE.app~  runcf_start.sh~  runcf_startRT.sh~  stop_runcf.sh  stop_runcf.sh~
ALOE_DOCENCIA_20210116/APPs/JACKTools/TEST_DACJACK_RX_FILTERED_GRAPH /: TEST_DACJACK_RX_FILTERED_GRAPH.app  TEST_DACJACK_RX_GRAPH.app  jack_server_start.sh
ALOE_DOCENCIA_20210116/APPs/JACKTools/TEST_DACJACK_RX_GRAPH/: jack_server_start.sh  jack_server_stop.sh  runcf_start.sh
ALOE_DOCENCIA_20210116/APPs/JACKTools/TEST_DACJACK_SOURCETONE/: TEST_DACJACK_SOURCETONE.app  runcf_startRT.sh
ALOE_DOCENCIA_20210116/APPs/JACKTools/TEST_JACK1_BUFFER/: TEST_BUFFER_1024.app  TEST_BUFFER_2048.app  TEST_BUFFER_4096.app  TEST_BUFFER_6144.app  TEST_BUFFER_8192.app  jack_server_start.sh  make_installNEW.sh  runcf_startRT.sh  runcf_startRT1024.sh  runcf_startRT2048.sh  runcf_startRT4096.sh  runcf_startRT6144.sh  runcf_startRT8192.sh  stop_runcf.sh  stop_runcf.sh~
ALOE_DOCENCIA_20210116/APPs/OCTAVE_SCRIPTS/: SCATTERING_COMPLEX.sh
ALOE_DOCENCIA_20210116/APPs/WAVEForms/FILTER_STD/: FILTER_CHANNEL_ANALYZER_FREQ_SWEEP.app  FILTER_CHANNEL_ANALYZER_FREQ_SWEEP_REPORT.app  FILTER_CHANNEL_ANALYZER_IMPULSE.app  stop_runcf.sh~
ALOE_DOCENCIA_20210116/APPs/WAVEForms/LTE_UPLINK_CHAIN_REPORT_STD_P21/: REPORT_READ.app  SUI_NOREPORT.app  SUI_REPORT.app  stop_runcf.sh
ALOE_DOCENCIA_20210116/APPs/WAVEForms/LTE_UPLINK_CHAIN_SIM_256/: SIM_UPLINK.app  make_installALL.sh
ALOE_DOCENCIA_20210116/INSTALL_ALOE/: scriptInstallALL.sh
ALOE_DOCENCIA_20210116/JACK/: JACK_UTILS_MARÇ15.tar
ALOE_DOCENCIA_20210116/JACK/JACK_UTILS_MAR15/: INSTALL_JACK_SERVER.txt  INSTALL_JACK_SERVER.txt~
ALOE_DOCENCIA_20210116/JACK/JACK_UTILS_MAR15/CLIENT/: Makefile  Makefile.am  jack_client  jack_client.c  jack_client.c.OK_V0  (+6 more)
ALOE_DOCENCIA_20210116/SWMAN_EXECS/: execinfo
ALOE_DOCENCIA_20210116/autom4te.cache/: output.0  output.1  output.2  output.3  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
ALOE_DOCENCIA_20210116/cmdman_console/: Makefile  Makefile.am  Makefile.in
ALOE_DOCENCIA_20210116/cmdman_console/include/: cmdman_cmds.h  cmdman_prints.h  params.h
ALOE_DOCENCIA_20210116/cmdman_console/src/: cmdman.c  cmdman.c~  cmdman_cmds.c  cmdman_cmds.c~  cmdman_prints.c  cmdman_prints.c~
ALOE_DOCENCIA_20210116/doc/: ALOEStatistics  ALOE_APRIL17_Tutorial.txt  ALOE_JAN16_GUIO.txt  ALOE_JAN16_GUIO.txt~  ALOE_NOV2015_GUIO.txt  ALOE_NOV2015_GUIO.txt~  ALOE_SEPT2015_GUIO.txt  ALOE_SEPT2015_GUIO.txt~  ESPURIS.txt~  GERARD_NOV2015_GUIO.txt  GERARD_NOV2015_GUIO.txt~  LAST_CHANGES.txt  TESTLab2_3_T16docx.docx  Thumbs.db
ALOE_DOCENCIA_20210116/hw_api/lnx/: Makefile  Makefile.am  Makefile.am~  Makefile.in
ALOE_DOCENCIA_20210116/matlab/aloe/: aloe.tlc  capi_BIOSignalLog.h  lnx_callback.m  lnx_install_dir.m  lnx_main.c  lnx_unix.tmf  make_lnx.m  rtwmakecfg.m
ALOE_DOCENCIA_20210116/scripts/: add_extendedALOE1.5.pl  add_extendedALOE1.5.pl~  add_moduleALOE1.5.pl  add_moduleALOE1.5.pl~  arm_configure  build_pkg.sh  create_moduleALOE1.6.sh  create_moduleALOE1.6NOV15.sh~  create_moduleALOE_SK18.sh  create_module_template.sh  create_module_template.sh~  create_module_template2.sh  create_module_template4.sh  create_module_template4.sh~  create_module_templateSK15.sh  create_module_templateSK15.sh~  distclean.sh  install_api.sh  install_binaries  install_binaries~  temp.sh  update_modules.pl  update_modules.pl~  viewlogs.sh
ALOE_DOCENCIA_20210116/scripts/autom4te.cache/: requests
ALOE_DOCENCIA_20210116/scripts/module_template2.ALOE1.6NOV15/: .cproject  .project
ALOE_DOCENCIA_20210116/scripts/module_template4.ALOE1.6SK15/: module_template4.tar
ALOE_DOCENCIA_20210116/sw_api/include/: cm_ifc.h  phal_sw_api.h  phal_sw_api.h~  skeletonExt.h  skeletonExtSK18.h  skeletonExtVars.h  skeletonExtVarsSK18.h  swapi_utils.h  swapi_utils.h~
ALOE_DOCENCIA_20210116/sw_api/lnx_make/: Makefile  Makefile.am  Makefile.in
ALOE_DOCENCIA_20210116/sw_api/src/: phal_cm_wrapper.c  phal_services.c  skeleton.c  skeleton.c~  skeletonExt.c  skeletonExt.c~  skeletonExtSK18.c  skeletonExtendedInputs.h  skeletonExtendedOutputs.h
ALOE_DOCENCIA_20210116/sw_daemons/include/: app.h  bridge.h  bridge_cmds.h  cmdman_backend.h  cmdman_cmds.h  cmdman_jni.h  daemon.h  downexe.h  doxygen.h  exec.h  exec_cmds.h  frontend.h  frontend_cmds.h  hwman_cmds.h  itf_utils.h  log.h  mapper.h  pe.h  phal_daemons.h  phitf.h  phobj.h  pkt.h  rtcobj.h  stats.h  stats.h~  stats_cmds.h  statsman_cmds.h  swload_cmds.h  swman.h  swman.h~  swman_cmds.h  swman_platforms.h  sync.h  var.h  xitf.h
ALOE_DOCENCIA_20210116/sw_daemons/lnx_make/: Makefile  Makefile.am  Makefile.in
ALOE_DOCENCIA_20210116/utils/include/: bits_utils.h  bits_utils.h~  cfg_parser.h  net_utils.h  params.h  print_utils.h  print_utils.h~  set.h  str.h  strdata.h  time_utils.h  time_utils.h~
ALOE_DOCENCIA_20210116/utils/lnx_make/: Makefile  Makefile.am  Makefile.am~  Makefile.in
ALOE_DOCENCIA_20210116/utils/src/: bits_utils.c  bits_utils.c~  cfg_parser.c  net_utils.c  params.c  print_utils.c  print_utils.c~  set.c  str.c  strdata.c  time_utils.c
(+570 files in other folders)
