AUTOMAKE_OPTIONS = subdir-objects

lib_LIBRARIES = lib/libaloeplot.a
lib_libaloeplot_a_CFLAGS = -ansi -fPIC
lib_libaloeplot_a_CPPFLAGS = -I../include
lib_libaloeplot_a_SOURCES = ../src/gnuplot_i.c ../src/plot_mode.c ../src/complexplot.c					
#lib_libaloeSK15_a_LIBADD = -lrt 

EXTRA_DIST=../include/*.h
